Add anonymous artifact recovery.
